<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="back">Back</string>
    <string name="loan_date">loan date:</string>
    <string name="amount">amount:</string>
    <string name="percent">percent:</string>
    <string name="name">name:</string>
    <string name="last_name">last name:</string>
    <string name="phone_number">phone number:</string>
    <string name="id">identification number: %d</string>
    <string name="failed_to_connect">Failed to connect to the server. Please check back later</string>
    <string name="approved_message">
        Your application has been reviewed and approved by the system. You can get a loan at the nearest bank branch.\n
        To do this, provide the bank employee with the loan identification number (listed below) and your passport details.\n
        If you have any questions regarding the operation of the service or the procedure for obtaining a loan, please contact:\n\u0020•
        Number: +8 800 555 35-35\n\u0020•
        Email: honeymoney@mail.ru
    </string>
    <string name="registered_message">
        Your application has been accepted and is currently being processed by the system. You will receive a decision on your application shortly.\n
        If you have any questions regarding the operation of the service or the procedure for obtaining a loan, please contact:\n\u0020•
        Number: +8 800 555 35-35\n\u0020•
        Email: honeymoney@mail.ru
    </string>
    <string name="reject_message">
        Your application has been rejected. We apologize for the inconvenience caused.\n
        If you have any questions regarding the operation of the service or the procedure for obtaining a loan, please contact:\n\u0020•
        Number: +8 800 555 35-35\n\u0020•
        Email: honeymoney@mail.ru
    </string>
</resources>